syntax = "proto3";

package otp_seed_v1;

service OtpSeedService {
  rpc GetOtpSeed (SeedRequest) returns (SeedResponse);
}

message SeedRequest {
  bytes aik_name = 1;
  bytes ek_pub = 2;
}

message SeedResponse {
  bytes encrypted_identity = 1;
  bytes integrity_hmac = 2;
  bytes encrypted_secret = 3;
}